# the_pattern_office

./: README.md  config_manager.py  main.py  main_config.py  pyproject.toml
.devcontainer/: devcontainer.json
config_manager/: config_manager.py
tests/: config.yaml  test_base_class.py  test_config_manager.py  test_data_domain.py  test_pattern_factory.py  test_pattern_office.py
tests/domain/: test_data_domain.py
tpo/application/: pattern_factory.py
tpo/config/: config_manager.py  data_domain.yaml  data_domain_finance.yaml
tpo/domain/: base_class.py  base_data_entity.py  data_domain.py  data_product.py  pattern_data_tier.py
tpo/models/: base_model.yaml
tpo/patterns/: pattern.py  pattern_data_tier.py
